Nutch Change Log

Current Development

* NUTCH-1699 Tika Parser - Image Parse Bug (Mehmet Zahid Yüzügüldü, snagel via lewismc)

* NUTCH-1568 port pluggable indexing architecture to 2.x (Talat UYARER via lewismc)

* NUTCH-1672 Inlinks are added twice in DbUpdateReducer (Tien Nguyen Manh via lewismc)

* NUTCH-1667 Updatedb always ignore batchId (Tien Nguyen Manh via lewismc)

* NUTCH-1695 NutchDocument.toString() (markus via lewismc)

* NUTCH-1696 Enable use of (Gora) SNAPSHOT dependencies (lewismc)

* NUTCH-1681 In URLUtil.java, toUNICODE method does not work correctly (Ä°lhami KALKAN, snagel, markus via lewismc) 

* NUTCH-1673 Title isn't reset in MoreIndexingFilter (Nguyen Manh Tien via lewismc)

* NUTCH-1621 Remove deprecated class o.a.n.crawl.Crawler (Rui Gao via jnioche)

* NUTCH-1651 modifiedTime and prevmodifiedTime never set (Talat UYARER via lewismc)

* NUTCH-1360 Suport the storing of IP address connected to when web crawling (ferdy, lewismc, Yasin Kılınç)

* NUTCH-1588 Port NUTCH-1245 URL gone with 404 after db.fetch.interval.max stays db_unfetched in CrawlDb and is generated over and over again to 2.x (Talat UYARER via lewismc)

* NUTCH-1650 Adaptive Fetch Scheduler interval Wrong Set (Talat UYARER via lewismc)

* NUTCH-1413 Record response time (Yasin KILINC, Talat UYARER, snagel via lewismc)

* NUTCH-1125 JUnit test for tld (Sertac TURKEL via lewismc)

* NUTCH-1124 JUnit test for scoring-opic (Talat UYARER via lewismc)

* NUTCH-1641 Log timings for main jobs (jnioche)

* NUTCH-1556 enabling updatedb to accept batchId (kaveh minooie,Feng)

* NUTCH-1619 Writes Dmoz Description and Title information to db with snippet argument ( Yasin Kılınç via feng)

* NUTCH-1631 Display Document Count Added To Solr Server (Furkan KAMACI via lewismc)

* NUTCH-1629 Injector skips empty lines in seed files (kaveh minooie via jnioche)

* NUTCH-1624 Typo in WebTableReader line 486 (kaveh minooie via lewismc)
