@@ -1,0 +1,35 @@
+<?xml version="1.0" ?>
+<!-- 
+Licensed to the Apache Software Foundation (ASF) under one or more contributor 
+license agreements. See the NOTICE file distributed with this work for additional 
+information regarding copyright ownership. The ASF licenses this file to 
+You under the Apache License, Version 2.0 (the "License"); you may not use 
+this file except in compliance with the License. You may obtain a copy of 
+the License at http://www.apache.org/licenses/LICENSE-2.0 Unless required 
+by applicable law or agreed to in writing, software distributed under the 
+License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS 
+OF ANY KIND, either express or implied. See the License for the specific 
+language governing permissions and limitations under the License. -->
+
+<ivy-module version="1.0">
+  <info organisation="org.apache.nutch" module="${ant.project.name}">
+    <license name="Apache 2.0" />
+    <ivyauthor name="Apache Nutch Team" url="http://nutch.apache.org" />
+    <description>Apache Nutch</description>
+  </info>
+
+  <configurations>
+    <include file="../../..//ivy/ivy-configurations.xml" />
+  </configurations>
+
+  <publications>
+    <!--get the artifact from our module name -->
+    <artifact conf="master" />
+  </publications>
+
+  <dependencies>
+    <dependency org="org.elasticsearch" name="elasticsearch"
+      rev="0.90.1" conf="*->default" />
+  </dependencies>
+
+</ivy-module>
